--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/cwood89/bamazon#readme",
   "dependencies": {
+    "chalk": "^2.4.1",
+    "dotenv": "^6.2.0",
     "inquirer": "^6.2.1",
     "mysql": "^2.16.0"
   }
